# zephyr-module-example

./: CMakeLists.txt  Kconfig  README.md  west.yml
drivers/: README.md
include/: README.md
include/module-example/: version.h
lib/: CMakeLists.txt  Kconfig  README.md  version.c
zephyr/: module.yml
